[ADD] Intro + Glosario + Mat Compl + Ref Biblio + Sintesis + AD

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -45,8 +45,6 @@
 figcaption 
     font-weight: normal !important
 
-    background-color: #D2C3DD !important
-
 /**************************************************************/
 /***CUSTOM STYLES***/
 /**************************************************************/
@@ -59,7 +57,7 @@ figcaption
   margin-inline: -3.3rem
 .bg-color
   &-1
-    color: $color-primario !important
+    background-color: #EDF4FE !important
 
 .br
   &-1
