--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -99,6 +99,51 @@ figcaption
 .slyder-a__bullets__item--active
     background-color: $color-acento-botones
     border-color: $color-acento-botones
+
+.cursor-pointer.crd_hover_txt
+  cursor: pointer
+.crd_hover_txt
+  position: relative  
+  padding: 0 !important
+  overflow: hidden !important 
+  border-radius: 20px;
+  &:hover    
+    .crd_hover_txt--body   
+      transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1) 
+      transform: translateY(0)
+      background-color: #F2F9ED 
+    h5
+      color: $color-sistema-texto
+      text-align: center
+
+.crd_hover_txt--body
+    position: absolute
+    padding: 1.5rem
+    bottom: 0    
+    transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1)
+    transform: translateY(calc( 100% - 3.85rem ))
+    background-color: $color-acento-botones
+    width: 100%;
+    h5
+      color: $white
+      text-align: center
+  
+    @media (min-width:1200px) and (max-width:1400px)  
+      .crd_hover_txt--body
+        p
+          font-size: 0.85em
+.card-hover-cus:active, .card-hover-cus:focus, .card-hover-cus:hover 
+    background-image: url('../assets/curso/temas/bg/9.svg')
+.card-hover-cus:active, .card-hover-cus:focus, .card-hover-cus:hover .bg-color-6
+  background-color: #FEC009 
+
+.card-hover-cus
+    border-radius: 20px;
+    background-image: url('../assets/curso/temas/bg/8.svg');
+    background-size: cover;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+
 /**************************************************************/
 /***CUSTOM STYLES***/
 /**************************************************************/
@@ -139,6 +184,20 @@ figcaption
     background-color: #CCE9B7 !important
   &-4
     background-color: #1F3B5F !important
+  &-5
+    background-color: #FFF9E5 !important
+  &-6
+    background-color: #4E93EE 
+  &-7
+    background-color: #33501E !important
+  &-8
+    background-color: #594303 !important
+  &-9
+    &:before
+      background-color: #EDF4FE 
+  &-10
+    &:before
+      background-color: #B8D4F8 
 
 .br
   &-1
@@ -155,8 +214,10 @@ figcaption
       
 .hcard
   &-1
-    height: 750px !important
-
+    height: 350px !important
+.w-cus
+  &-1
+    width: fit-content
 .text-cus
   &-1
     font-weight: 600 !important
@@ -195,6 +256,38 @@ figcaption
   &-text
     margin-right: 10px
     margin-left: 10px;
+
+.avatar
+  position: absolute
+  bottom: 0
+  right: -4rem
+  z-index: 1
+  @media (max-width: 1000px)
+    display: none
+.crd--avatarHorizontal
+  position: relative
+  padding-right: 12rem
+  & > *
+    position: relative
+  &::before
+    position: absolute
+    content: ''
+    top: 0
+    right: 0
+    width: calc( 100% - 60px)
+    height: 100%
+  @media (max-width: 1000px)
+    padding-right: 2rem
+
+.crd--first, .crd--last
+  &::before
+    background-color: #B8D4F8 !important
+.crd--first
+  &::before
+    border-top-left-radius: 30px
+.crd--last
+  &::before
+    border-bottom-left-radius: 30px
 /**************************************************************/
 /*Media Queries*/  
 /**************************************************************/
@@ -221,6 +314,9 @@ figcaption
     width: 30px;
     height: 30px;
     background-size: initial;
+  .tarjeta--container > .tarjeta
+    border-radius: 20px;
+    margin-bottom: 2rem !important;
 //// TABLET MINI 768--------------------------------------
 @media screen and (max-width: $bp-min-md)
   .mb-cus
